# GameOfLife3D

./: .gitignore  AsmTools.asm  AsmTools.h  CMakeLists.txt  LICENSE  README.md  README_EN.md  help.txt  installer.iss  life.aps  life.rc  life.sln  life.vcxproj  life.vcxproj.filters  main.cpp  resource.h  run_life.bat
.github/workflows/: Check_ImGui_Submodule.yml  release.yml  release_setup.yml
app/: Application.cpp  Application.h  IController.h
game/: Cell.cpp  Cell.h  EcosystemAutomaton.cpp  EcosystemAutomaton.h  GPUAutomaton.cpp  GPUAutomaton.h  GameController.cpp  GameController.h  GameOfLife.cpp  GameOfLife.h  GameSimulation.cpp  GameSimulation.h  GameStateManager.cpp  GameStateManager.h  Grid.cpp  Grid.h  ModManager.cpp  ModManager.h  ModSystemAutomaton.cpp  ModSystemAutomaton.h  PatternManager.cpp  PatternManager.h  UIBuilder.cpp  UIBuilder.h  UIElement.h
glsl/: cells_fragment_shader.glsl  cells_vertex_shader.glsl  grid_fragment_shader.glsl  grid_vertex_shader.glsl  overlay_fragment_shader.glsl
mathematics/: Matrix4x4.cpp  Matrix4x4.h  Vector3d.cpp  Vector3d.h
mods/: README.MD  genesis.glsl  index.html  mod_list.gmod  modystemshader.glsl
mods/blink/: main.glsl  mod.cfg  ui.cfg
mods/docs/: HELP.MD  MAGICBOOK.MD  README.MD
mods/genesis/: main.glsl  mod.cfg  ui.cfg
mods/modystemshader/: main.glsl  ui.cfg
mods/testmod/: main.glsl
rendering/: BaseRenderer.cpp  BaseRenderer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CellInstance.h  CellsRenderer.cpp  CellsRenderer.h  CellsViewportRenderer.cpp  CellsViewportRenderer.h  ChunkedCellsRenderer.cpp  ChunkedCellsRenderer.h  CubeRenderer.cpp  CubeRenderer.h  DebugOverlay.cpp  DebugOverlay.h  GridRenderer.cpp  GridRenderer.h  ICellInstanceProvider.h  IRendererProvider.h  ObjectPicker.cpp  ObjectPicker.h  PatternInserterRenderer.cpp  PatternInserterRenderer.h  RenderController.cpp  RenderController.h  Renderer.cpp  Renderer.h  SelectionRenderer.cpp  SelectionRenderer.h  TextureFieldRenderer.cpp  TextureFieldRenderer.h  UI.cpp  UI.h  UIController.cpp  UIController.h  UIRenderer.cpp  UIRenderer.h
rendering/GUI/: Button.cpp  Button.h  Label.cpp  Label.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UIShaders.h
res/: about.txt  life.rc  resource.h
shader/: ecosystemShader.hlsl
system/: CommandLineParser.cpp  CommandLineParser.h  GLFunctions.cpp  GLFunctions.h  InputEvent.h  InputHandler.cpp  InputHandler.h  OpenGLDebug.cpp  OpenGLDebug.h  OpenGLInitializer.cpp  OpenGLInitializer.h  PerformanceStats.cpp  PerformanceStats.h  SettingsManager.cpp  SettingsManager.h  ShaderManager.cpp  ShaderManager.h
windowing/: GridPicker.cpp  GridPicker.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  WindowController.cpp  WindowController.h
